Update ChromaDB experiment

--- a/examples/notebooks/ChromaDBExperiment.ipynb
+++ b/examples/notebooks/ChromaDBExperiment.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "885dabeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "beaa70a1",
    "metadata": {
     "ExecuteTime": {
@@ -78,10 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "02140eb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/torch/utils/tensorboard/__init__.py:4: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if not hasattr(tensorboard, \"__version__\") or LooseVersion(\n",
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/torch/utils/tensorboard/__init__.py:6: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  ) < LooseVersion(\"1.15\"):\n",
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/tensorflow/python/debug/cli/debugger_cli_common.py:19: DeprecationWarning: module 'sre_constants' is deprecated\n",
+      "  import sre_constants\n"
+     ]
+    }
+   ],
    "source": [
     "from chromadb.utils import embedding_functions\n",
     "\n",
@@ -105,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9114cfbf",
    "metadata": {
     "ExecuteTime": {
@@ -159,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "83b33130",
    "metadata": {
     "ExecuteTime": {
@@ -173,6 +186,8 @@
      "output_type": "stream",
      "text": [
       "WARNING:chromadb.segment.impl.vector.local_hnsw:Number of requested results 10 is greater than number of elements in index 3, updating n_results = 3\n",
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/chromadb/utils/read_write_lock.py:29: DeprecationWarning: notifyAll() is deprecated, use notify_all() instead\n",
+      "  self._read_ready.notifyAll()\n",
       "WARNING:chromadb.segment.impl.vector.local_hnsw:Number of requested results 10 is greater than number of elements in index 3, updating n_results = 3\n",
       "WARNING:chromadb.segment.impl.vector.local_hnsw:Number of requested results 10 is greater than number of elements in index 3, updating n_results = 3\n",
       "WARNING:chromadb.segment.impl.vector.local_hnsw:Number of requested results 10 is greater than number of elements in index 3, updating n_results = 3\n"
@@ -197,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "01c7e682",
    "metadata": {},
    "outputs": [
@@ -222,8 +237,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>embed_fn</th>\n",
        "      <th>query_texts</th>\n",
+       "      <th>embed_fn</th>\n",
        "      <th>top doc ids</th>\n",
        "      <th>distances</th>\n",
        "      <th>documents</th>\n",
@@ -232,32 +247,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>This is a query document</td>\n",
+       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>[[id1, id3, id2]]</td>\n",
        "      <td>[[14.106966018676758, 14.294026374816895, 18.137874603271484]]</td>\n",
        "      <td>[[This is a document, This is the document., This is another document]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>This is a another query document</td>\n",
+       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>[[id2, id3, id1]]</td>\n",
        "      <td>[[13.375584602355957, 16.815608978271484, 16.913410186767578]]</td>\n",
        "      <td>[[This is another document, This is the document., This is a document]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>default</td>\n",
        "      <td>This is a query document</td>\n",
+       "      <td>default</td>\n",
        "      <td>[[id1, id3, id2]]</td>\n",
        "      <td>[[0.7111212611198425, 0.8084275126457214, 1.010977029800415]]</td>\n",
        "      <td>[[This is a document, This is the document., This is another document]]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>default</td>\n",
        "      <td>This is a another query document</td>\n",
+       "      <td>default</td>\n",
        "      <td>[[id2, id1, id3]]</td>\n",
        "      <td>[[0.7673601508140564, 0.8709302544593811, 0.9072309732437134]]</td>\n",
        "      <td>[[This is another document, This is a document, This is the document.]]</td>\n",
@@ -267,11 +282,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                  embed_fn                       query_texts  \\\n",
-       "0  paraphrase-MiniLM-L3-v2  This is a query document           \n",
-       "1  paraphrase-MiniLM-L3-v2  This is a another query document   \n",
-       "2  default                  This is a query document           \n",
-       "3  default                  This is a another query document   \n",
+       "                        query_texts                 embed_fn  \\\n",
+       "0  This is a query document          paraphrase-MiniLM-L3-v2   \n",
+       "1  This is a another query document  paraphrase-MiniLM-L3-v2   \n",
+       "2  This is a query document          default                   \n",
+       "3  This is a another query document  default                   \n",
        "\n",
        "         top doc ids  \\\n",
        "0  [[id1, id3, id2]]   \n",
@@ -318,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8ddbb951",
    "metadata": {},
    "outputs": [],
@@ -332,12 +347,13 @@
     "}\n",
     "\n",
     "\n",
-    "def measure_correlation(input_query: str, results: dict, metadata: dict) -> float:\n",
-    "    \"\"\"\n",
+    "def measure_correlation(row: \"pandas.core.series.Series\", ranking_column_name: str = \"top doc ids\") -> float:\n",
+    "    r\"\"\"\n",
     "    A simple test that compares the expected ranking for a given query with the actual ranking produced\n",
     "    by the embedding function being tested.\n",
     "    \"\"\"\n",
-    "    correlation, _ = stats.spearmanr(results[\"ids\"][0], EXPECTED_RANKING[input_query])\n",
+    "    input_query = row[\"query_texts\"]\n",
+    "    correlation, _ = stats.spearmanr(row[ranking_column_name][0], EXPECTED_RANKING[input_query])\n",
     "    return correlation"
    ]
   },
@@ -351,19 +367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e80dfeec",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"ranking_correlation\", measure_correlation, input_key=\"query_texts\")"
+    "experiment.evaluate(\"ranking_correlation\", measure_correlation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4d09c18e",
    "metadata": {
     "scrolled": true
@@ -390,67 +406,67 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ranking_correlation</th>\n",
-       "      <th>embed_fn</th>\n",
        "      <th>query_texts</th>\n",
+       "      <th>embed_fn</th>\n",
        "      <th>top doc ids</th>\n",
        "      <th>distances</th>\n",
        "      <th>documents</th>\n",
+       "      <th>ranking_correlation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>This is a query document</td>\n",
+       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>[[id1, id3, id2]]</td>\n",
        "      <td>[[14.106966018676758, 14.294026374816895, 18.137874603271484]]</td>\n",
        "      <td>[[This is a document, This is the document., This is another document]]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>This is a another query document</td>\n",
+       "      <td>paraphrase-MiniLM-L3-v2</td>\n",
        "      <td>[[id2, id3, id1]]</td>\n",
        "      <td>[[13.375584602355957, 16.815608978271484, 16.913410186767578]]</td>\n",
        "      <td>[[This is another document, This is the document., This is a document]]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>default</td>\n",
        "      <td>This is a query document</td>\n",
+       "      <td>default</td>\n",
        "      <td>[[id1, id3, id2]]</td>\n",
        "      <td>[[0.7111212611198425, 0.8084275126457214, 1.010977029800415]]</td>\n",
        "      <td>[[This is a document, This is the document., This is another document]]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>default</td>\n",
        "      <td>This is a another query document</td>\n",
+       "      <td>default</td>\n",
        "      <td>[[id2, id1, id3]]</td>\n",
        "      <td>[[0.7673601508140564, 0.8709302544593811, 0.9072309732437134]]</td>\n",
        "      <td>[[This is another document, This is a document, This is the document.]]</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   ranking_correlation                 embed_fn  \\\n",
-       "0  1.0                  paraphrase-MiniLM-L3-v2   \n",
-       "1  1.0                  paraphrase-MiniLM-L3-v2   \n",
-       "2  1.0                  default                   \n",
-       "3 -1.0                  default                   \n",
+       "                        query_texts                 embed_fn  \\\n",
+       "0  This is a query document          paraphrase-MiniLM-L3-v2   \n",
+       "1  This is a another query document  paraphrase-MiniLM-L3-v2   \n",
+       "2  This is a query document          default                   \n",
+       "3  This is a another query document  default                   \n",
        "\n",
-       "                        query_texts        top doc ids  \\\n",
-       "0  This is a query document          [[id1, id3, id2]]   \n",
-       "1  This is a another query document  [[id2, id3, id1]]   \n",
-       "2  This is a query document          [[id1, id3, id2]]   \n",
-       "3  This is a another query document  [[id2, id1, id3]]   \n",
+       "         top doc ids  \\\n",
+       "0  [[id1, id3, id2]]   \n",
+       "1  [[id2, id3, id1]]   \n",
+       "2  [[id1, id3, id2]]   \n",
+       "3  [[id2, id1, id3]]   \n",
        "\n",
        "                                                        distances  \\\n",
        "0  [[14.106966018676758, 14.294026374816895, 18.137874603271484]]   \n",
@@ -458,11 +474,17 @@
        "2  [[0.7111212611198425, 0.8084275126457214, 1.010977029800415]]    \n",
        "3  [[0.7673601508140564, 0.8709302544593811, 0.9072309732437134]]   \n",
        "\n",
-       "                                                                 documents  \n",
-       "0  [[This is a document, This is the document., This is another document]]  \n",
-       "1  [[This is another document, This is the document., This is a document]]  \n",
-       "2  [[This is a document, This is the document., This is another document]]  \n",
-       "3  [[This is another document, This is a document, This is the document.]]  "
+       "                                                                 documents  \\\n",
+       "0  [[This is a document, This is the document., This is another document]]   \n",
+       "1  [[This is another document, This is the document., This is a document]]   \n",
+       "2  [[This is a document, This is the document., This is another document]]   \n",
+       "3  [[This is another document, This is a document, This is the document.]]   \n",
+       "\n",
+       "   ranking_correlation  \n",
+       "0  1.0                  \n",
+       "1  1.0                  \n",
+       "2  1.0                  \n",
+       "3 -1.0                  "
       ]
      },
      "metadata": {},
