--- a/examples/notebooks/WeaviateExperiment.ipynb
+++ b/examples/notebooks/WeaviateExperiment.ipynb
@@ -537,6 +537,14 @@
    "source": [
     "## Evaluate the model response"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21f03398",
+   "metadata": {},
+   "source": [
+    "For now, please refer to the ChromaDB example for possible evaluation methods (i.e. ranking correlation). Other examples show case how you can evaluate with LLMs."
+   ]
   }
  ],
  "metadata": {
