Update StrucutedOutput Example

--- a/examples/notebooks/StructuredOutput.ipynb
+++ b/examples/notebooks/StructuredOutput.ipynb
@@ -170,7 +170,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>prompt</th>\n",
-       "      <th>response(s)</th>\n",
+       "      <th>response</th>\n",
        "      <th>latency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -178,26 +178,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Generate valid JSON from the following input: The task is to count all the words in a string</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Generate valid JSON from the following input: The task is to add up numbers 1 to 100</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Generate valid python to complete the following task: The task is to count all the words in a string</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Generate valid python to complete the following task: The task is to add up numbers 1 to 100</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000007</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -210,11 +210,11 @@
        "2  Generate valid python to complete the following task: The task is to count all the words in a string   \n",
        "3  Generate valid python to complete the following task: The task is to add up numbers 1 to 100           \n",
        "\n",
-       "             response(s)   latency  \n",
-       "0  \\n\\nGeorge Washington  0.000004  \n",
-       "1  \\n\\nGeorge Washington  0.000002  \n",
-       "2  \\n\\nGeorge Washington  0.000002  \n",
-       "3  \\n\\nGeorge Washington  0.000002  "
+       "                        response   latency  \n",
+       "0  {\"text\": \"George Washington\"}  0.000015  \n",
+       "1  {\"text\": \"George Washington\"}  0.000004  \n",
+       "2  {\"text\": \"George Washington\"}  0.000003  \n",
+       "3  {\"text\": \"George Washington\"}  0.000007  "
       ]
      },
      "metadata": {},
@@ -235,79 +235,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fc2f1bde",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>prompt_template</th>\n",
-       "      <th>Generate valid JSON from the following input: {{input}}</th>\n",
-       "      <th>Generate valid python to complete the following task: {{input}}</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_input</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'The task is to add up numbers 1 to 100'}</th>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'The task is to count all the words in a string'}</th>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "prompt_template                                             Generate valid JSON from the following input: {{input}}  \\\n",
-       "user_input                                                                                                            \n",
-       "{'input': 'The task is to add up numbers 1 to 100'}          \\n\\nGeorge Washington                                    \n",
-       "{'input': 'The task is to count all the words in a string'}  \\n\\nGeorge Washington                                    \n",
-       "\n",
-       "prompt_template                                             Generate valid python to complete the following task: {{input}}  \n",
-       "user_input                                                                                                                   \n",
-       "{'input': 'The task is to add up numbers 1 to 100'}          \\n\\nGeorge Washington                                           \n",
-       "{'input': 'The task is to count all the words in a string'}  \\n\\nGeorge Washington                                           "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "harness.visualize(pivot=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -325,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "63de3014",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import validate_json\n",
-    "from prompttools.utils import validate_python"
+    "from prompttools.utils import validate_json_response\n",
+    "from prompttools.utils import validate_python_response"
    ]
   },
   {
@@ -344,12 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "233f25a6",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevin/hegel/prompttools/prompttools/utils/validate_python.py:28: DeprecationWarning: 'epylint' will be removed in pylint 3.0, use https://github.com/emacsorphanage/pylint instead.\n",
+      "  pylint_stdout, _ = lint.py_run(PROMPTTOOLS_TMP, return_std=True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -372,7 +307,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>prompt</th>\n",
-       "      <th>response(s)</th>\n",
+       "      <th>response</th>\n",
        "      <th>latency</th>\n",
        "      <th>is_json</th>\n",
        "      <th>is_python</th>\n",
@@ -382,34 +317,34 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Generate valid JSON from the following input: The task is to count all the words in a string</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000015</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Generate valid JSON from the following input: The task is to add up numbers 1 to 100</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Generate valid python to complete the following task: The task is to count all the words in a string</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Generate valid python to complete the following task: The task is to add up numbers 1 to 100</td>\n",
-       "      <td>\\n\\nGeorge Washington</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>{\"text\": \"George Washington\"}</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -422,11 +357,11 @@
        "2  Generate valid python to complete the following task: The task is to count all the words in a string   \n",
        "3  Generate valid python to complete the following task: The task is to add up numbers 1 to 100           \n",
        "\n",
-       "             response(s)   latency  is_json  is_python  \n",
-       "0  \\n\\nGeorge Washington  0.000004  0.0      0.0        \n",
-       "1  \\n\\nGeorge Washington  0.000002  0.0      0.0        \n",
-       "2  \\n\\nGeorge Washington  0.000002  0.0      0.0        \n",
-       "3  \\n\\nGeorge Washington  0.000002  0.0      0.0        "
+       "                        response   latency  is_json  is_python  \n",
+       "0  {\"text\": \"George Washington\"}  0.000015  1.0      1.0        \n",
+       "1  {\"text\": \"George Washington\"}  0.000004  1.0      1.0        \n",
+       "2  {\"text\": \"George Washington\"}  0.000003  1.0      1.0        \n",
+       "3  {\"text\": \"George Washington\"}  0.000007  1.0      1.0        "
       ]
      },
      "metadata": {},
@@ -434,8 +369,8 @@
     }
    ],
    "source": [
-    "harness.evaluate(\"is_json\", validate_json.evaluate)\n",
-    "harness.evaluate(\"is_python\", validate_python.evaluate)\n",
+    "harness.evaluate(\"is_json\", validate_json_response, {\"response_column_name\": \"response\"})\n",
+    "harness.evaluate(\"is_python\", validate_python_response, {\"response_column_name\": \"response\"})\n",
     "harness.visualize()"
    ]
   },
