Update example results

--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>prompt</th>\n",
-       "      <th>response(s)</th>\n",
+       "      <th>response</th>\n",
        "      <th>latency</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -167,25 +167,25 @@
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
        "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
-       "      <td>1.121741</td>\n",
+       "      <td>1.109592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Answer the following question: Who was the first president of the USA?</td>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
-       "      <td>0.911955</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "      <td>0.802870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
-       "      <td>1.021080</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>0.799840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond the following query: Who was the first president of the USA?</td>\n",
-       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
-       "      <td>1.274893</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>1.047151</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -198,17 +198,17 @@
        "2  Respond the following query: Who was the first president?                \n",
        "3  Respond the following query: Who was the first president of the USA?     \n",
        "\n",
-       "                                                                           response(s)  \\\n",
-       "0  \\n\\nThe first president of the United States was George Washington.                   \n",
-       "1  \\n\\nThe first president of the United States was George Washington, who served from   \n",
-       "2  \\n\\nThe first president of the United States was George Washington. He took office    \n",
-       "3  \\n\\nThe first President of the United States was George Washington, who was inaug     \n",
+       "                                                                            response  \\\n",
+       "0  \\n\\nThe first president of the United States was George Washington.                 \n",
+       "1  \\n\\nThe first President of the United States was George Washington, who was inaug   \n",
+       "2  \\n\\nThe first president of the United States was George Washington.                 \n",
+       "3  \\n\\nThe first president of the United States was George Washington.                 \n",
        "\n",
        "    latency  \n",
-       "0  1.121741  \n",
-       "1  0.911955  \n",
-       "2  1.021080  \n",
-       "3  1.274893  "
+       "0  1.109592  \n",
+       "1  0.802870  \n",
+       "2  0.799840  \n",
+       "3  1.047151  "
       ]
      },
      "metadata": {},
@@ -218,87 +218,6 @@
    "source": [
     "harness.run()\n",
     "harness.visualize()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b35caa9a",
-   "metadata": {},
-   "source": [
-    "You can use the `pivot` keyword argument to view results by the template and inputs that created them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fc2f1bde",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>prompt_template</th>\n",
-       "      <th>Answer the following question: {{input}}</th>\n",
-       "      <th>Respond the following query: {{input}}</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>user_input</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'Who was the first president of the USA?'}</th>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
-       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>{'input': 'Who was the first president?'}</th>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "prompt_template                                                                                  Answer the following question: {{input}}  \\\n",
-       "user_input                                                                                                                                  \n",
-       "{'input': 'Who was the first president of the USA?'}  \\n\\nThe first president of the United States was George Washington, who served from   \n",
-       "{'input': 'Who was the first president?'}             \\n\\nThe first president of the United States was George Washington.                   \n",
-       "\n",
-       "prompt_template                                                                                   Respond the following query: {{input}}  \n",
-       "user_input                                                                                                                                \n",
-       "{'input': 'Who was the first president of the USA?'}  \\n\\nThe first President of the United States was George Washington, who was inaug   \n",
-       "{'input': 'Who was the first president?'}             \\n\\nThe first president of the United States was George Washington. He took office  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "harness.visualize(pivot=True)"
    ]
   },
   {
@@ -319,24 +238,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8ddbb951",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity"
+    "from prompttools.utils import semantic_similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e80dfeec",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/torch/utils/tensorboard/__init__.py:4: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  if not hasattr(tensorboard, \"__version__\") or LooseVersion(\n",
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/torch/utils/tensorboard/__init__.py:6: DeprecationWarning: distutils Version classes are deprecated. Use packaging.version instead.\n",
+      "  ) < LooseVersion(\"1.15\"):\n",
+      "/Users/kevin/miniconda3/envs/prompttools/lib/python3.11/site-packages/tensorflow/python/debug/cli/debugger_cli_common.py:19: DeprecationWarning: module 'sre_constants' is deprecated\n",
+      "  import sre_constants\n"
+     ]
+    }
+   ],
    "source": [
-    "harness.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")"
+    "harness.evaluate(\"similar_to_expected\", semantic_similarity, expected=[\"George Washington\"] * 4)"
    ]
   },
   {
@@ -349,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "233f25a6",
    "metadata": {},
    "outputs": [
@@ -375,7 +307,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>prompt</th>\n",
-       "      <th>response(s)</th>\n",
+       "      <th>response</th>\n",
        "      <th>latency</th>\n",
        "      <th>similar_to_expected</th>\n",
        "    </tr>\n",
@@ -385,29 +317,29 @@
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
        "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
-       "      <td>1.121741</td>\n",
-       "      <td>0.275267</td>\n",
+       "      <td>1.109592</td>\n",
+       "      <td>0.724732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Answer the following question: Who was the first president of the USA?</td>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington, who served from</td>\n",
-       "      <td>0.911955</td>\n",
-       "      <td>0.344860</td>\n",
+       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
+       "      <td>0.802870</td>\n",
+       "      <td>0.663015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>\\n\\nThe first president of the United States was George Washington. He took office</td>\n",
-       "      <td>1.021080</td>\n",
-       "      <td>0.341740</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>0.799840</td>\n",
+       "      <td>0.724732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond the following query: Who was the first president of the USA?</td>\n",
-       "      <td>\\n\\nThe first President of the United States was George Washington, who was inaug</td>\n",
-       "      <td>1.274893</td>\n",
-       "      <td>0.336985</td>\n",
+       "      <td>\\n\\nThe first president of the United States was George Washington.</td>\n",
+       "      <td>1.047151</td>\n",
+       "      <td>0.724732</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -420,17 +352,17 @@
        "2  Respond the following query: Who was the first president?                \n",
        "3  Respond the following query: Who was the first president of the USA?     \n",
        "\n",
-       "                                                                           response(s)  \\\n",
-       "0  \\n\\nThe first president of the United States was George Washington.                   \n",
-       "1  \\n\\nThe first president of the United States was George Washington, who served from   \n",
-       "2  \\n\\nThe first president of the United States was George Washington. He took office    \n",
-       "3  \\n\\nThe first President of the United States was George Washington, who was inaug     \n",
+       "                                                                            response  \\\n",
+       "0  \\n\\nThe first president of the United States was George Washington.                 \n",
+       "1  \\n\\nThe first President of the United States was George Washington, who was inaug   \n",
+       "2  \\n\\nThe first president of the United States was George Washington.                 \n",
+       "3  \\n\\nThe first president of the United States was George Washington.                 \n",
        "\n",
        "    latency  similar_to_expected  \n",
-       "0  1.121741  0.275267             \n",
-       "1  0.911955  0.344860             \n",
-       "2  1.021080  0.341740             \n",
-       "3  1.274893  0.336985             "
+       "0  1.109592  0.724732             \n",
+       "1  0.802870  0.663015             \n",
+       "2  0.799840  0.724732             \n",
+       "3  1.047151  0.724732             "
       ]
      },
      "metadata": {},
